--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <script src="scripts/add.js" async></script>
   <script src="scripts/export.js" async></script>
   <script src="scripts/onion.js" async></script>
+  <script src="scripts/background.js" async></script>
   <!-- MAIN SCRIPT -->
   <script src="scripts/main.js" async></script>
 </head>
