--- a/newhome.html
+++ b/newhome.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href='https://fonts.googleapis.com/css?family=Courier Prime' rel='stylesheet'>
     </head>
+    <script>window.onbeforeunload = function () {window.scrollTo(0, 0);}</script>
     <body>
         <nav id="navbar">
             <script src = "scripts/navbar.js"></script>
@@ -46,7 +47,7 @@
                 <h1>02</h1>
                 <h2>CONVENIENT</h2>
                 <p>EnLiven is and will always be a free website that is accessible to anyone.</p>
-                <p>hello</p>
+                <br>
                 <button class='intro-button'>Get Started!</button>    
             </div>
             <div class="description">
@@ -59,28 +60,37 @@
         </div>
 
         <div id="intro2">
-            <div class="description">
-                <br>
-                <h1>01</h1>
-                <h2>EASY</h2>
-                <p>EnLiven has an user interface that is extremely user-friendly and tutorials to guide people. </p>
-                <br>
+            <script src = "scripts/intro.js"></script>
+            <h1>About Us</h1>
+            <div>
+                <button class="tablink" onclick="openAbout('Introduction', this, '#6B9775')" id="defaultOpen">Introduction</button>
+                <button class="tablink" onclick="openAbout('Wonjong Park', this, '#9BC8A5')">Wonjong Park</button>
+                <button class="tablink" onclick="openAbout('Edward Wu', this, '#7AD17E')">Edward Wu</button>
+                <button class="tablink" onclick="openAbout('Justin Zou', this, '#75B884')">Justin Zou</button>
             </div>
-            <div class="description">
+            <div>
+                <div id="Introduction" style ="background-color:#6B9775; font-size: 20px; text-align: center;" class="tabcontent">
+                <h1>Introduction</h1>
                 <br>
-                <h1>02</h1>
-                <h2>CONVENIENT</h2>
-                <p>EnLiven is and will always be a free website that is accessible to anyone.</p>
-                <br>
-                <button class="intro-button">Hello</button>
+                <p>EnLiven was first thought of due to our interest in animation. However, a quick Google search later, our group of 4 realized that there were no animation tutorial sites. Despite animation becoming a bigger and bigger field than ever before, it is still a daunting art to get into. So we created EnLiven. Meant to convey the idea of bringing your creations to life, EnLiven will allow  users to learn the 12 basic principles of animation using our interactive tutorials and simplified animation engine. Eventually we hope to create a community where users can interact and give tips to each other. Ultimately, users will be able to move on to more advanced animation engines with EnLiven as a starting point. </p>
+                </div>
+
+                <div id="Wonjong Park" style ="background-color:#9BC8A5" class="tabcontent">
+                <h1>Wonjong Park</h1>
+                <p>Paris is the capital of France.</p> 
+                </div>
+
+                <div id="Edward Wu" style ="background-color:#7AD17E" class="tabcontent">
+                <h1>Edward Wu</h1>
+                <p>Tokyo is the capital of Japan.</p>
+                </div>
+
+                <div id="Justin Zou" style ="background-color:#e132f1" class="tabcontent">
+                <h1>Justin Zou</h1>
+                <p>Oslo is the capital of Norway.</p>
+                </div>
             </div>
-            <div class="description">
-                <br>
-                <h1>03</h1>
-                <h2>FREE</h2>
-                <p>EnLiven is and will always be a free website that is accessible to anyone. </p>
-                <br>
-            </div>
+            <script>document.getElementById("defaultOpen").click();</script>
         </div>
         
         <div class="footer-dark">
@@ -92,7 +102,6 @@
                             <ul>
                                 <li><a href="#">Animate</a></li>
                                 <li><a href="#">12 Principles</a></li>
-                                <li><a href="#">Tutorials</a></li>
                             </ul>
                         </div>
                         <div class="col-sm-6 col-md-3 item">
