--- a/newhome.html
+++ b/newhome.html
@@ -68,7 +68,7 @@
                 <button class="tablink" onclick="openAbout('Edward Wu', this, '#7AD17E')">Edward Wu</button>
                 <button class="tablink" onclick="openAbout('Justin Zou', this, '#75B884')">Justin Zou</button>
             </div>
-            <div>
+            <div id="intro2-main">
                 <div id="Introduction" style ="background-color:#6B9775; font-size: 20px; text-align: center;" class="tabcontent">
                 <h1>Introduction</h1>
                 <br>
@@ -77,17 +77,44 @@
 
                 <div id="Wonjong Park" style ="background-color:#9BC8A5" class="tabcontent">
                 <h1>Wonjong Park</h1>
-                <p>Paris is the capital of France.</p> 
+                <div class="introduction-person">
+                    <div style="background-image: url('wonjong-intro.jpg');" class="introduction-img"></div>
+                    <div class="introduction-text">
+                        <p>Age: 18</p>
+                        <p>School: Stuyvesant High School</p>
+                        <p>Interested subjects: Biology, Physics,Math, CS</p>
+                        <p>Hobbies: Animation, Webtoon, 3D Printing, Jag-saw puzzle</p>
+                        <p>Least favorite person in team: Justin</p>
+                    </div>
+                </div>
                 </div>
 
                 <div id="Edward Wu" style ="background-color:#7AD17E" class="tabcontent">
                 <h1>Edward Wu</h1>
-                <p>Tokyo is the capital of Japan.</p>
+                <div class="introduction-person">
+                    <div style="background-image: url('edward-intro.png');" class="introduction-img"></div>
+                    <div class="introduction-text">
+                        <p>Age: 16</p>
+                        <p>School: Stuyvesant High School</p>
+                        <p>Interested subjects: Math, CS, Chem, Physics, Stat</p>
+                        <p>Hobbies: Town of Salem, Algodoo marble race, Korean</p>
+                        <p>Least favorite person in team: Justin</p>
+                    </div>
+                </div>
                 </div>
 
-                <div id="Justin Zou" style ="background-color:#e132f1" class="tabcontent">
+                <div id="Justin Zou" style ="background-color:#75B884" class="tabcontent">
                 <h1>Justin Zou</h1>
-                <p>Oslo is the capital of Norway.</p>
+                <div class="introduction-person">
+                    <div style="background-image: url('justin-intro.jpeg');" class="introduction-img"></div>
+                    <div class="introduction-text">
+                        <p>Age: 17</p>
+                        <p>School: Stuyvesant High School</p>
+                        <p>Interested subjects:CS</p>
+                        <p>Hobbies: Video Games, Manga</p>
+                        <p>Least favorite person in team: Wonjong</p>
+                    </div>
+                </div>
                 </div>
             </div>
             <script>document.getElementById("defaultOpen").click();</script>
