--- a/index.html
+++ b/index.html
@@ -75,14 +75,15 @@
         </div>
       </div>
       <button id="delete" class="navbar-button" type="button" onclick="DeleteSprite();">Delete</button>
-    <div class="dropdown">
-      <button onclick="displayDropdown('background-dropdown')" class="navbar-button">AddBackground</button>
-      <div id="background-dropdown" class="dropdown-content">
-        <button onclick="addDefault();">Default</button>
-        <button onclick="addBlackBackground();">BlackBackground</button>
-        <button onclick="addYourName();">YourNameBackground</button>
+      <div class="dropdown">
+        <button onclick="displayDropdown('background-dropdown')" class="navbar-button">AddBackground</button>
+        <div id="background-dropdown" class="dropdown-content">
+          <button onclick="addDefault();">Default</button>
+          <button onclick="addBlackBackground();">BlackBackground</button>
+          <button onclick="addYourName();">YourNameBackground</button>
+          <label for="file-import" class="custom-file-upload">Import</label>
+        </div>
       </div>
-    </div>
     </div>
     <!-- RELATIONS PANEL -->
     <div id="relations" class="panel">
@@ -101,6 +102,8 @@
       <p id="w">W</p><input type="number" id="width" name="width" min="0" max="100000">
       <p id="h">H</p><input type="number" id="height" name="height" min="0" max="100000">
       <p id="r">R</p><input type="number" id="rotation" name="rotation" min="-100000" max="100000">
+      <p id = "c">Color Picker<input type="color" id="colorpicker" value="#1b9834"></p>
+      <button onclick="changeColor()" class="navbar-button"> Change Color</button>
     </div>
     
     <!-- TIMELINE PANEL -->
