Finished undo functionality and also cleaned up timeline.js

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
   <script src="scripts/rotating.js" async></script>
   <script src="scripts/converting.js" async></script>
   <script src="scripts/timeline.js" async></script>
+  <script src="scripts/playing.js" async></script>
+  <script src="scripts/looping.js" async></script>
   <script src="scripts/input.js" async></script>
   <script src="scripts/add.js" async></script>
   <script src="scripts/export.js" async></script>
