--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
       <p id="w">W</p><input type="number" id="width" name="width" min="0" max="100000">
       <p id="h">H</p><input type="number" id="height" name="height" min="0" max="100000">
       <p id="r">R</p><input type="number" id="rotation" name="rotation" min="-100000" max="100000">
+      <p id = "c">Color Picker<input type="color" id="colorpicker" value="#1b9834"></p>
+      <button onclick="changeColor()" class="navbar-button"> Change Color</button>
     </div>
     
     <!-- TIMELINE PANEL -->
