--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="scripts/import.js" async></script>
   <!-- BACKEND SCRIPTS -->
   <script src="scripts/display.js" async></script>
+  <script src="scripts/Keyboard.js" async></script>
   <script src="scripts/buttons.js" async></script>
   <script src="scripts/moving.js" async></script>
   <script src="scripts/scaling.js" async></script>
