--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               </div>
             </div>
           </div> 
-          <button onclick="exportTL()">Export</button>
+          <button onclick="exportE()">Export</button>
         </div>
       </div>
       <div class="dropdown">
