edwards memory miraculously returns

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <script src="scripts/undo.js" async></script>
   <script src="scripts/background.js" async></script>
   <script src="scripts/keyboard.js" async></script>
+  <script src="scripts/Parenting.js" async></script>
   <!-- MAIN SCRIPT -->
   <script src="scripts/main.js" async></script>
 </head>
