--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
         <button onclick="displayDropdown('file-dropdown')" class="navbar-button">File</button>
         <div id="file-dropdown" class="dropdown-content">
           <a href="javascript:location.reload(true)">New File</a>
+
           <!-- Trigger/Open The Modal -->
-          <button id="myBtn">Import</button>
+          <button id="import-button">Import</button>
+
           <!-- The Modal -->
           <div id="myModal" class="modal">
           <!-- Modal content -->
@@ -58,7 +60,7 @@
               <div class="modal-header">
                 <span class="close">&times;</span>
               </div>
-              <div class="modal-body">
+              <div class="modalw-body">
                 <label for="file-import" class="custom-file-upload">Import</label>
                 <input type="file" id="file-import" multiple>
               </div>
@@ -67,6 +69,7 @@
               </div>
             </div>
           </div> 
+
           <button onclick="exportTL()">Export</button>
         </div>
       </div>
