--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
       <p id="r">R</p><input type="number" id="rotation" name="rotation" min="-100000" max="100000">
       <p id = "c">Color Picker<input type="color" id="colorpicker" value="#1b9834">
       <button onclick="changeColor()" class="navbar-button"> Change Color</button></p>
+
+      <button class="timeline-button" onclick="addParent();"><i class="fas fa-plus"></i></button>
+      <button class="timeline-button" onclick="removeParent();"><i class="fas fa-minus"></i></button>
     </div>
     
     <!-- TIMELINE PANEL -->
