--- a/newhome.html
+++ b/newhome.html
@@ -146,7 +146,11 @@
                                 <h3>EnLiven</h3>
                             </div>
                             <div class="email">
-
+                                <form action="/feedback_form.php" method="post">
+                                    <input class="email1" type="text" name="email_address" placeholder="Email Address">
+                                    <textarea class ="email1" name="feedback" cols="50" rows="5" placeholder="Your feedback"></textarea>
+                                    <input class="email-button" type="submit" name="send" value="Submit">
+                                </form>
                             </div>
 
                         </div>
