--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="scripts/pixi/pixi.min.js"></script>
   <!-- FRONTEND SCRIPTS -->
   <script src="scripts/navbar.js" async></script>
+  <script src="scripts/home-navbar.js" async></script>
   <script src="scripts/properties.js" async></script>
   <script src="scripts/treeview.js" async></script>
   <script src="scripts/import.js" async></script>
