--- a/newhome.html
+++ b/newhome.html
@@ -10,11 +10,11 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href='https://fonts.googleapis.com/css?family=Courier Prime' rel='stylesheet'>
+        <script src="scripts/home-navbar.js" async></script>
     </head>
     <script>window.onbeforeunload = function () {window.scrollTo(0, 0);}</script>
     <body>
         <nav id="navbar">
-            <script src = "scripts/navbar.js"></script>
             <a></a>
             <br>
             <button id="b1">Animate</button>
