--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script src="scripts/navbar.js" async></script>
   <script src="scripts/properties.js" async></script>
   <script src="scripts/treeview.js" async></script>
-  <script src="scripts/import.js" async></script>
+  <script src="scripts/importImg.js" async></script>
   <!-- BACKEND SCRIPTS -->
   <script src="scripts/display.js" async></script>
   <script src="scripts/buttons.js" async></script>
@@ -38,8 +38,14 @@
   <script src="scripts/main.js" async></script>
 </head>
 
+<!-- <input type="file" id="file-selector">
+    <p id="status"></p>
+    <div>
+      <img id="output">
+    </div> -->
 <body>
   <div id="grid">
+ 
     <!-- TOP NAVBAR -->
     <div id="navbar">
       <a id="home" class="navbar-button" href="home.html"><i class="fas fa-leaf"></i></a>
@@ -47,24 +53,10 @@
         <button onclick="displayDropdown('file-dropdown')" class="navbar-button">File</button>
         <div id="file-dropdown" class="dropdown-content">
           <a href="javascript:location.reload(true)">New File</a>
-          <!-- Trigger/Open The Modal -->
-          <button id="myBtn">Import</button>
-          <!-- The Modal -->
-          <div id="myModal" class="modal">
-          <!-- Modal content -->
-            <div class="modal-content">
-              <div class="modal-header">
-                <span class="close">&times;</span>
-              </div>
-              <div class="modal-body">
-                <label for="file-import" class="custom-file-upload">Import</label>
-                <input type="file" id="file-import" multiple>
-              </div>
-              <div class="modal-footer">
-                <!-- <h3>Modal Footer</h3> -->
-              </div>
-            </div>
-          </div> 
+          <label for="file-import" class="custom-file-upload">Import</label>
+          <input type="file" id="file-import" multiple>
+          <label for="file-Img-selector" class="custom-file-upload">ImportImg</label>
+          <input type="file" id="file-Img-selector">
           <button onclick="exportE()">Export</button>
         </div>
       </div>
