--- a/index.html
+++ b/index.html
@@ -112,11 +112,12 @@
       <p id="w">W</p><input type="number" id="width" name="width" min="0" max="100000">
       <p id="h">H</p><input type="number" id="height" name="height" min="0" max="100000">
       <p id="r">R</p><input type="number" id="rotation" name="rotation" min="-100000" max="100000">
-      <p id = "c">Color Picker<input type="color" id="colorpicker" value="#1b9834">
-      <button onclick="changeColor()" class="navbar-button"> Change Color</button></p>
+      
+      <p id = "c">Color Picker<input type="color" id="colorpicker" value="#1b9834"></p>
+      <button onclick="changeColor()" class="navbar-button"> Change Color</button>
 
-      <button class="timeline-button" onclick="addParent();"><i class="fas fa-plus"></i></button>
-      <button class="timeline-button" onclick="removeParent();"><i class="fas fa-minus"></i></button>
+      <p id="r">Add Parent (press on Child)</p><button class="timeline-button" onclick="addParent();"><i class="fas fa-plus"></i></button>
+      <p id="r">Remove Parent (press on Child)</p><button class="timeline-button" onclick="removeParent();"><i class="fas fa-minus"></i></button>
     </div>
     
     <!-- TIMELINE PANEL -->
