importing own sprite and background

--- a/index.html
+++ b/index.html
@@ -55,8 +55,6 @@
           <a href="javascript:location.reload(true)">New File</a>
           <label for="file-import" class="custom-file-upload">Import</label>
           <input type="file" id="file-import" multiple>
-          <label for="file-Img-selector" class="custom-file-upload">ImportImg</label>
-          <input type="file" id="file-Img-selector">
           <button onclick="exportE()">Export</button>
         </div>
       </div>
@@ -86,6 +84,8 @@
           <button onclick="addSquare();">Square</button>
           <button onclick="addTriangle();">Triangle</button>
           <button onclick="addHuman();">Human</button>
+          <label for="file-Img-selector" class="custom-file-upload">AddSprite</label>
+          <input type="file" id="file-Img-selector">
         </div>
       </div>
       <button id="delete" class="navbar-button" type="button" onclick="deleteSelectedSprite();">Delete</button>
@@ -95,6 +95,8 @@
         <button onclick="addDefault();">Default</button>
         <button onclick="addBlackBackground();">BlackBackground</button>
         <button onclick="addYourName();">YourNameBackground</button>
+        <label for="file-BackgroundImg-selector" class="custom-file-upload">AddBg</label>
+          <input type="file" id="file-BackgroundImg-selector">
       </div>
     </div>
     </div>
