Sprites are shown but not buttons

--- a/newhome.html
+++ b/newhome.html
@@ -92,12 +92,12 @@
                 <div id="Edward Wu" style ="background-color:#7AD17E" class="tabcontent">
                 <h1>Edward Wu</h1>
                 <div class="introduction-person">
-                    <div style="background-image: url('edward-intro.png');" class="introduction-img"></div>
+                    <div style="background-image: url('edward-intro.png');" class="introduction-img-ed"></div>
                     <div class="introduction-text">
                         <p>Age: 16</p>
                         <p>School: Stuyvesant High School</p>
                         <p>Interested subjects: Math, CS, Chem, Physics, Stat</p>
-                        <p>Hobbies: Town of Salem, Algodoo marble race, Korean</p>
+                        <p>Hobbies: Learning Korean, Chess, Digital Art, Town of Salem, Algodoo marble racing</p>
                         <p>Least favorite person in team: Justin</p>
                     </div>
                 </div>
