added css for labels

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <button onclick="displayDropdown('file-dropdown')" class="navbar-button">File</button>
         <div id="file-dropdown" class="dropdown-content">
           <a href="javascript:location.reload(true)">New File</a>
-          <label for="file-import" class="custom-file-upload">Import</label>
-          <input type="file" id="file-import" multiple>
+          <label for="file-import" class="custom-file-upload">Import
+          <input type="file" id="file-import" multiple></label>
           <button onclick="exportE()">Export</button>
         </div>
       </div>
