--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <script src="scripts/background.js" async></script>
   <script src="scripts/keyboard.js" async></script>
   <script src="scripts/parenting.js" async></script>
+  <script src="scripts/tree.js" async></script>
   <!-- MAIN SCRIPT -->
   <script src="scripts/main.js" async></script>
 </head>
