Treeview second draft

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <script src="scripts/keyboard.js" async></script>
   <script src="scripts/parenting.js" async></script>
   <script src="scripts/tree.js" async></script>
+  <script src="scripts/textures.js" async></script>
   <!-- MAIN SCRIPT -->
   <script src="scripts/main.js" async></script>
 </head>
