Human added to treeview by hard code

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
   <script src="scripts/properties.js" async></script>
   <script src="scripts/treeview.js" async></script>
   <script src="scripts/import.js" async></script>
+  <!--- CLASS SCRIPTS -->
+  <script src="scripts/queue.js" async></script>
+  <script src="scripts/treenode.js" async></script>
+  <script src="scripts/treerootnode.js" async></script>
   <!-- BACKEND SCRIPTS -->
   <script src="scripts/display.js" async></script>
   <script src="scripts/buttons.js" async></script>
