Items can be added

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     
     <!-- RELATIONS PANEL -->
     <div id="relations" class="panel">
-      <ul id="relations-list">
+      <ul id="relations-list" class="tier1">
       </ul>
     </div>
 
