--- a/newhome.html
+++ b/newhome.html
@@ -46,7 +46,7 @@
                 <br>
                 <h1>02</h1>
                 <h2>CONVENIENT</h2>
-                <p>EnLiven is and will always be a free website that is accessible to anyone.</p>
+                <p>EnLiven is and will always be a webapp accessible anywhere</p>
                 <br>
                 <button class='intro-button'>Get Started!</button>    
             </div>
@@ -54,7 +54,7 @@
                 <br>
                 <h1>03</h1>
                 <h2>FREE</h2>
-                <p>EnLiven is and will always be a free website that is accessible to anyone. </p>
+                <p>EnLiven is and will always completely free and open source. </p>
                 <br>
             </div>
         </div>
