Updating Justin Information

--- a/newhome.html
+++ b/newhome.html
@@ -110,8 +110,8 @@
                     <div class="introduction-text">
                         <p>Age: 17</p>
                         <p>School: Stuyvesant High School</p>
-                        <p>Interested subjects:CS</p>
-                        <p>Hobbies: Video Games, Manga</p>
+                        <p>Interested subjects:CS, Arts</p>
+                        <p>Hobbies: Video Games, Manga, Game Development,Drawing</p>
                         <p>Least favorite person in team: Wonjong</p>
                     </div>
                 </div>
