--- a/newhome.html
+++ b/newhome.html
@@ -17,9 +17,7 @@
         <nav id="navbar">
             <a></a>
             <br>
-            <button id="b1">Animate</button>
-            <button id="b2" >Resources</button>
-            <button id="b3">Community</button>
+            <button onclick="location.href='index.html'">Animate</button>
             <button onclick="location.href='login.html'" id="b4">Log In</button>
         </nav>
 
